--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 									information regarding deaths, population demographics, vaccination statistics, and rates.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/PeteGitHubbb/SQLPortfolioProject/blob/main/CovidAnalysis.sql" class="button">view Porject</a></li>
+										<li><a href="https://ourworldindata.org/coronavirus" class="button">view data</a></li>
 									</ul>
 								</article>
 								<article>
