--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Pete Wang<br />
+						<h1><span style="font-size: 0.7em;">Pete Wang</span><br /></h1>
 						</h1>
-						<p><!--About me: Data Analyst skills in Python, SQL, Tableau, PowerBI--> <!--<a href="https://www.linkedin.com/in/petewang2519/">@LinkedIN</a><a href="https://html5up.net"></a><br />
+						<p> Hello, I am an undergraduate student from the University of Waterloo <br > major in Computational Mathematics <br >
+							I am pasionate about utilizing my strengths and applying them to real-world problems. <br >
+							Please scrow down to view some of my projects
+						<!--<a href="https://www.linkedin.com/in/petewang2519/">@LinkedIN</a><a href="https://html5up.net"></a><br />
 						<a href="https://github.com/PeteGitHubbb">@GitHub</a>.-->
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
