--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						</h1>
 						<p> Hello, I am an undergraduate student from the University of Waterloo <br > major in Computational Mathematics <br >
 							Passionate about utilizing my strengths and applying them to real-world problems. <br >
-							Please scrow down to view some of my projects
+							Please scroll down to view some of my projects
 						<!--<a href="https://www.linkedin.com/in/petewang2519/">@LinkedIN</a><a href="https://html5up.net"></a><br />
 						<a href="https://github.com/PeteGitHubbb">@GitHub</a>.-->
 						<ul class="actions">
