--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Pete Wang Profile</title>
@@ -21,8 +16,7 @@
 					<div id="intro">
 						<h1><span style="font-size: 0.7em;">Pete Wang</span><br /></h1>
 						</h1>
-						<p> Hello, I am an undergraduate student from the University of Waterloo <br > major in Computational Mathematics <br >
-							Passionate about utilizing my strengths and applying them to real-world problems <br >
+						<p> Hello, I am an undergraduate student from the University of Waterloo <br > majoring in Computational Mathematics <br >
 							Please scroll down to view some of my projects
 						<!--<a href="https://www.linkedin.com/in/petewang2519/">@LinkedIN</a><a href="https://html5up.net"></a><br />
 						<a href="https://github.com/PeteGitHubbb">@GitHub</a>.-->
