--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
 						</h1>
 						<p> Hello, I am an undergraduate student from the University of Waterloo <br > majoring in Computational Mathematics <br >
 							Please scroll down to view some of my projects
-						<!--<a href="https://www.linkedin.com/in/petewang2519/">@LinkedIN</a><a href="https://html5up.net"></a><br />
-						<a href="https://github.com/PeteGitHubbb">@GitHub</a>.-->
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -97,55 +95,24 @@
 										<li><a href="https://public.tableau.com/app/profile/pete.wang/viz/CovidDashboardVisualizations_17044858699260/Dashboard1" class="button">view</a></li>
 									</ul>
 								</article>
-								<!--<article>
-									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 7, 2017</span>
-										<h2><a href="#">Augue lorem<br />
-										primis vestibulum</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
-									</ul>
-								</article>-->
 							</section>
+						
+						<!-- Featured Post -->
+						<article class="post featured">
+							<header>
+								<span class="date"><!--April 25, 2017--></span>
+								<!--<h2><a href="https://job-application-tracker-a9210.web.app/">Job Application <br />
+									Tracker</a></h2>-->
+								<a href="https://job-application-tracker-a9210.web.app/" class="image main"><img src="images/pic04.png" alt="" width="40%" /></a>
+								<ul class="actions special">
+							</header>
+								<p>Developed a simple Job Application Tracker, a web-based tool using HTML, CSS, and JavaScript, integrated with cloud platform (Firebase) for real-time data storage.
+									The application allows users to log and track job applications, rejections, and interviews, providing a visual representation of their job 
+									search progress. Currently, the authentication feature is not set up, making it a personal tool for individual use (Those are my real-time data, how embarrassing!).</p>
+							    <ul class="actions special"></p>
+							   		<li><a href="https://job-application-tracker-a9210.web.app/" class="button large">View Porject</a></li>
+							    </ul>
+						</article>
 
 						<!-- Footer -->
 							<footer>
