--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<article class="post featured">
 								<header>
 									<span class="date"><!--April 25, 2017--></span>
-									<h2><a href="https://github.com/PeteGitHubbb/SQLPortfolioProject/blob/main/NashvilleHousing.sql">Data Cleaning Porject<br />
+									<h2><a href="https://github.com/PeteGitHubbb/SQLPortfolioProject/blob/main/NashvilleHousing.sql">Data Cleaning Project<br />
 									</a></h2>
 									<p>Enhanced the Nashville Housing dataset by streamlining information for better analysis. 
 									   Applied strategic SQL queries to tidy up date formats, fill missing data, restructure fields, 
@@ -60,7 +60,7 @@
 								</header>
 								<a href="https://github.com/PeteGitHubbb/SQLPortfolioProject/blob/main/NashvilleHousing.sql" class="image main"><img src="images/pic01.png" alt="" width="40%" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/PeteGitHubbb/SQLPortfolioProject/blob/main/NashvilleHousing.sql" class="button large">View Porject</a></li>
+									<li><a href="https://github.com/PeteGitHubbb/SQLPortfolioProject/blob/main/NashvilleHousing.sql" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -77,7 +77,7 @@
 									leveraging the COVID-19 dataset sourced from <a href="https://ourworldindata.org/coronavirus" class="logo">Our World in Data</a>. Employed SQL queries to process and extract insightful 
 									information regarding deaths, population demographics, vaccination statistics, and rates.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/PeteGitHubbb/SQLPortfolioProject/blob/main/CovidAnalysis.sql" class="button">view Porject</a></li>
+										<li><a href="https://github.com/PeteGitHubbb/SQLPortfolioProject/blob/main/CovidAnalysis.sql" class="button">view Project</a></li>
 										<li><a href="https://ourworldindata.org/coronavirus" class="button">view data</a></li>
 									</ul>
 								</article>
@@ -110,7 +110,7 @@
 									The application allows users to log and track job applications, rejections, and interviews, providing a visual representation of their job 
 									search progress. Currently, the authentication feature is not set up, making it a personal tool for individual use (Those are my real-time data, how embarrassing!).</p>
 							    <ul class="actions special"></p>
-							   		<li><a href="https://job-application-tracker-a9210.web.app/" class="button large">View Porject</a></li>
+							   		<li><a href="https://job-application-tracker-a9210.web.app/" class="button large">View Project</a></li>
 							    </ul>
 						</article>
 
